# NasikoAlphaAgent-Submission

./: .env.example  .gitignore  AgentCard.json  Dockerfile  README.backup.before-guide.md  README.md  docker-compose.yml  pyproject.toml
HR-system/: .gitignore  AgentCard.json  Dockerfile  README.md  curlPOST.json  docker-compose.yml
HR-system/md files/: myreadme.md
HR-system/src/: __main__.py  agent.py  tools.py
HR-system/src/core/: __init__.py  aggregator.py  base_module.py  executor.py  planner.py  router.py
HR-system/src/modules/: __init__.py  calendar_manager.py  culture_analyzer.py  interview_coach.py  recruiter.py  researcher.py
HR-system/src/utils/: database.py  gmail.py  google_calendar.py  mongodb_database.py
docs/: PROGRESS.md  docs.md  plan.md  structure.md
resources/: HACKATHON_AGENT_GUIDE.md  customize.md
src/: __main__.py  agent.py
src/core/: router.py
src/modules/: customer_service.py  data_analytics.py  document_processor.py
src/utils/: __init__.py  database.py  mongodb_database.py
unified-business-agent/: .env.example  AgentCard.json  Dockerfile  curlPOST.json  docker-compose.yml  pyproject.toml
unified-business-agent/docs/: PROGRESS.md  plan.md  structure.md  todo.md
unified-business-agent/src/: __init__.py  __main__.py  agent.py  models.py  tools.py
unified-business-agent/src/core/: __init__.py  aggregator.py  base_module.py  executor.py  planner.py
unified-business-agent/src/modules/: __init__.py  finance.py  scheduling.py
unified-business-agent/src/utils/: database.py  document_ai.py  gmail.py  google_calendar.py
